<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TotalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tituloTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_compra"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042" />

        <TextView
            android:id="@+id/cantidadTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_de_productos"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloTotal"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/tvProductosTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cantidadTotal"
            app:layout_constraintTop_toBottomOf="@+id/tituloTotal"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/valorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_total"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cantidadTotal"
            app:layout_constraintVertical_bias="0.034" />

        <TextView
            android:id="@+id/tvValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/valorTotal"
            app:layout_constraintTop_toBottomOf="@+id/tvProductosTotal"
            app:layout_constraintVertical_bias="0.034" />

        <Button
            android:id="@+id/btnBorrarTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_compra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valorTotal"
            app:layout_constraintVertical_bias="0.127" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>