<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TituloEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_producto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.051"
            tools:layout_editor_absoluteY="56dp" />

        <EditText
            android:id="@+id/etNombreEditar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TituloEditar"
            app:layout_constraintVertical_bias="0.092"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_del_producto"
            android:inputType="textPersonName"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="236dp" />

        <EditText
            android:id="@+id/etCantidadEditar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombreEditar"
            app:layout_constraintVertical_bias="0.036"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="number"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="302dp" />

        <EditText
            android:id="@+id/etValorEditar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCantidadEditar"
            app:layout_constraintVertical_bias="0.048"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="357dp" />

        <TextView
            android:id="@+id/subEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.368"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etValorEditar"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/tvSubTotalEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="132dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/subEditar"
            app:layout_constraintTop_toBottomOf="@+id/etValorEditar"
            app:layout_constraintVertical_bias="0.095" />

        <Button
            android:id="@+id/btnModificar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subEditar"
            app:layout_constraintVertical_bias="0.298"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_producto"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="547dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>