<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/productoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.057" />

            <TextView
                android:id="@+id/tvNombreItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/productoItem"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.056" />

            <TextView
                android:id="@+id/cantidadItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productoItem"
                app:layout_constraintVertical_bias="0.031" />

            <TextView
                android:id="@+id/tvCantidadItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toEndOf="@+id/cantidadItem"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreItem"
                app:layout_constraintVertical_bias="0.031" />

            <TextView
                android:id="@+id/totalItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cantidadItem"
                app:layout_constraintVertical_bias="0.033" />

            <TextView
                android:id="@+id/tvPrecioItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/totalItem"
                app:layout_constraintTop_toBottomOf="@+id/tvCantidadItem"
                app:layout_constraintVertical_bias="0.035" />

            <ImageButton
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:ignore="SpeakableTextPresentCheck"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.829"
                app:layout_constraintStart_toEndOf="@+id/tvNombreItem"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.06"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:ignore="SpeakableTextPresentCheck"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.835"
                app:layout_constraintStart_toEndOf="@+id/tvNombreItem"
                app:layout_constraintTop_toBottomOf="@+id/btnEditar"
                app:layout_constraintVertical_bias="0.015"
                app:srcCompat="@android:drawable/ic_menu_delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>